[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["filippo.botti2@studenti.unipr.it"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/FilippoBotti/linguaggi_paradigmi/"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
